# gemini3

./: .env  .gitignore  dataset_all.md  game_agenda.md  one.ipynb  one.py
gemini_dataset/: dataset2.md
tactical_planner/: .gitignore  README.md  pyproject.toml
tactical_planner/src/tactical_planner/: crew.py  dataset0.md  dataset1.md  main.py  one.py  requirements.txt  t1.md  t2.md
tactical_planner/src/tactical_planner/config/: agents.yaml  crewai.yaml  tasks.yaml
tactical_planner/src/tactical_planner/knowledge/: maps.md  planning.md  sample_matches.md
tactical_planner/src/tactical_planner/vector_db1/: chroma.sqlite3
tactical_planner/src/tactical_planner/vector_db2/: chroma.sqlite3
tactical_planner/src/tactical_planner/vector_db3/: chroma.sqlite3
vector_db1/: chroma.sqlite3
vector_db2/: chroma.sqlite3
vector_db3/: chroma.sqlite3
