[project]
name = "tactical_planner"
version = "0.1.0"
description = "tactical_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
tactical_planner = "tactical_planner.main:run"
run_crew = "tactical_planner.main:run"
train = "tactical_planner.main:train"
replay = "tactical_planner.main:replay"
test = "tactical_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
